# pyspark-datagen

./: .gitignore  AGENTS.md  README.md
.cursor/rules/: agents-and-tests.mdc
learning-spark-datagen/: Makefile  README.md  buf.yaml  main.py  pyproject.toml
learning-spark-datagen/protos/game/v1/: game.proto
learning-spark-datagen/protos/hockey/v1/: fantasy_roster.proto  play_event.proto  player.proto
learning-spark-datagen/protos/leaderboard/v1/: leaderboard.proto
learning-spark-datagen/protos/order/v1/: order.proto
learning-spark-datagen/protos/user/v1/: user.proto
learning-spark-datagen/scripts/: ndjson_to_delta.py
learning-spark-datagen/src/learning_spark_datagen/: __init__.py
learning-spark-datagen/src/learning_spark_datagen/analysis/: __init__.py  fantasy_hockey_analysis.py  leaderboard_analysis.py
learning-spark-datagen/src/learning_spark_datagen/datagen/: __init__.py  gen_fantasy_roster.py  gen_game.py  gen_hockey_player.py  gen_leaderboard.py  gen_leaderboard_entry.py  gen_order.py  gen_play_event.py  gen_user.py
learning-spark-datagen/tests/: __init__.py  conftest.py  spark_session.py  test_converters.py  test_gen_order.py  test_gen_user.py  test_placeholder.py
learning-spark-datagen/tests/datagen/: __init__.py  test_gen_fantasy_roster.py  test_gen_game.py  test_gen_hockey_player.py  test_gen_leaderboard.py  test_gen_leaderboard_entry.py  test_gen_play_event.py
learning-spark-datagen/tests/resources/: orders.ndjson  users.ndjson
learning-spark-datagen/tests/utils/: __init__.py  test_converters.py  test_ndjson_reader.py
(+43 files in other folders)
